# tomBet

./: Cargo.toml  package.json  readme.md  todo.md  tsconfig.json
public/: lotto.js  lotto.ts  main.css  output.css  roulette.css  spinner.js  spinner.ts
src/: main.rs
src/generator/: horse.rs  mod.rs
src/middleware/: middleware.rs
src/play/: mod.rs  roulette.rs
src/utils/: auth.rs  db.rs
templates/: header.html  index.html  login.html  lotto.html  roulette.html  signup.html
templates/components/: balls.html
